# raspberry-example

./: .gitignore  Makefile  README.md  classifier.code-workspace  docker-compose.yml
classifier/: .gitignore  Dockerfile  cli.py  main.py  pyproject.toml  requirements.txt  routes.py  shared_state.py  worker.py
classifier/cocoa_classifier/: bean_segmenter.py  data_loader.py  predictor.py  segment_params.py  trainer.py
classifier/model/svm_v1/: model.pkl
classifier/schemas/: classifier_config.py
fastapi_app/: Dockerfile  main.py  pyproject.toml  requirements.txt
